add basic auth and tls

--- a/efk/kibana-value.yaml
+++ b/efk/kibana-value.yaml
@@ -1,23 +1,30 @@
 image:
   registry: docker.io
-  repository: bitnami/kibana
-  tag: 7.9.2
+  repository: tiendungitd/kibana-logtrail
+  tag: latest
+  pullPolicy: Always
 ingress:
   enabled: true
-  hostname: logging..io
+  hostname: logging.io
   path: /
   tls: true
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"   
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
 elasticsearch:
   hosts: 
     - elasticsearch-coordinating-only.efk.svc.cluster.local
   port: 9200
-plugins:
- - https://github.com/sivasamyk/logtrail/releases/download/v0.1.31/logtrail-7.9.2-0.1.31.zip
+#plugins:
+# - https://github.com/sivasamyk/logtrail/releases/download/v0.1.31/logtrail-7.9.2-0.1.31.zip
 extraVolumes:
   - name: logtrail-config
     configMap:
       name: logtrail
 extraVolumeMounts:
   - name: logtrail-config
-    mountPath: /usr/share/kibana/plugins/logtrail/logtrail.json
+    mountPath: /opt/bitnami/kibana/plugins/logtrail/logtrail.json
     subPath: logtrail.json
