--- a/nginx-custom.yaml
+++ b/nginx-custom.yaml
@@ -1,4 +1,5 @@
 controller:
+  ingressClass: nginx-nlb
   replicaCount: 1
   service:
     type: "LoadBalancer"
@@ -7,8 +8,8 @@ controller:
       https: https
     annotations:
       service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "900"
-#      service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
-      service.beta.kubernetes.io/aws-load-balancer-type: elb
+      service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
+      service.beta.kubernetes.io/aws-load-balancer-type: nlb
       service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
   stats:
     enabled: false
@@ -20,7 +21,7 @@ controller:
         prometheus.io/port: "10254"
   config:
     ssl-protocols: "TLSv1 TLSv1.1 TLSv1.2"
-    use-proxy-protocol: "true"
+#    use-proxy-protocol: "true"
     client-body-buffer-size: 128K
     client-max-body-size: 20m
     hsts: "true"
